<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.temp.Login" >

     <LinearLayout
        android:id="@+id/usernameRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:text="张三" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameRegion"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="123" />
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/save_cookie_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordRegion"
        android:textColor="#0003FF"
        android:text="@string/save_cookie_str"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_cookie_cb"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordRegion"
        android:layout_alignBaseline="@+id/submit"
        android:layout_toRightOf="@+id/submit"
        android:layout_margin="10dp"
        android:text="@string/reset" />
    
    <Button
        android:id="@+id/sign_in_Bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordRegion"
        android:layout_alignBaseline="@+id/submit"
        android:layout_toLeftOf="@+id/submit"
        android:layout_margin="10dp"
        android:text="@string/sign_in_str" />

</RelativeLayout>
